Add sorting functionality for tabs with UI button and style updates

--- a/window.html
+++ b/window.html
@@ -7,6 +7,8 @@
 </head>
 <body>
   <div class="wrapper">
+    <div class="sort-container">
+    </div>
     <div class="tabs-container" id="tabsList"></div>
     <div class="textbox-container">
       <textarea id="inputText" placeholder="Введите текст для отправки..."></textarea>
