Add buttons for history, saved prompts, and settings; enhance button styling

--- a/window.html
+++ b/window.html
@@ -7,12 +7,18 @@
 </head>
 <body>
   <div class="wrapper">
+
     <div class="sort-container">
     </div>
     <div class="tabs-container" id="tabsList"></div>
+    <div class = "buttons-container">
+      <button class="button" id="openHistoryButton">История</button>
+      <button class="button" id="openSavedPromptsButton">Сохранённые запросы</button>
+      <button class="button" id="openSettingsButton">Настройки</button>
+    </div>
     <div class="textbox-container">
       <textarea id="inputText" placeholder="Введите текст для отправки..."></textarea>
-      <button id="sendButton">Отправить</button>
+      <button class="button" id="sendButton">Отправить</button>
     </div>
   </div>
   <script src="window.js"></script>
