Implement right panel functionality with toggle behavior and active button styling

--- a/window.html
+++ b/window.html
@@ -23,7 +23,11 @@
         <button class="button" id="sendButton">Отправить</button>
       </div>
     </div>
-    <div class="right-panel"></div>
+    <div class="right-panel" id="rightPanel">
+      <button class="close-button" id="closePanel">✕</button>
+      <div class="panel-content" id="panelContent">
+      </div>
+  </div>
   </div>
   <script src="window.js"></script>
   <link rel="stylesheet" href="style.css">
